# cc5x-helper

./: .flake8  .gitignore  APPNOTE_TB3261_CONSIDERATIONS.md  CC5X_VSCODE_MICROCHIP_EXTENSION_DESIGN.md  CC5X_VSCODE_PICKIT_INTEGRATION_TODO.md  CODEX_SETCC_IMPLEMENTATION_PLAN.md  MICROCHIP_PATCHING_PRIVATE_INTEGRATION_RESEARCH.md  MICROCHIP_TOOLCHAIN_REGISTRATION_FEASIBILITY.md  NATIVE_SETCC.md  README.md  SUPPORT_MATRIX.md  pyproject.toml
.github/workflows/: python-package.yml
experimental/microchip-toolchain/: probe-microchip-private-integration.js
experimental/microchip-toolchain/cc5x/: builds-mplab-opt.json  descriptor-mplab-opt.json
scripts/: prune_mplabx.sh
tests/: conftest.py  test_audit_followup.py  test_brg.py  test_build.py  test_cdl_codec.py  test_cdl_monitor.py  test_cdl_proto.py  test_cdl_protogen.py  test_debuggen.py  test_golden.py  test_gui_smoke.py  test_hardening.py  test_headergen_hardening.py  test_intellisense.py  test_json_commands.py  test_json_contract.py  test_measure.py  test_pack_updates.py  test_packs.py  test_project.py  test_validate_generated_headers.py
tests/golden/: cdl_proto.h  synth_pic16fsyn1.config5x.txt  synth_pic16fsyn1.h
tests/golden/measure/: stub_16f1509.fcs  stub_16f1509.occ  stub_16f1509.var
tickets/: T-001.json
tools/: __init__.py  build_linux_executable.sh  cc5x_helper_gui.py  cc5x_setcc_native.py  validate_generated_headers.py
tools/cc5x_setcc_native_lib/: __init__.py  brg.py  cdl_codec.py  cdl_monitor.py  cdl_proto.py  cdl_protogen.py  debuggen.py  fsutil.py  headergen.py  intellisense.py  measure.py  pack_updates.py  packs.py  picmeta.py  project.py
vscode/cc5x-vscode/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
vscode/cc5x-vscode/src/: artifacts.ts  configLens.ts  diagnostics.ts  extension.ts  helper.ts  manifestDiagnostics.ts  tasks.ts
