[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc5x-helper"
version = "0.1.0"
description = "Linux-native helper workflows for the BKND CC5X toolchain."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Gary Penhook" },
]
keywords = ["cc5x", "pic", "microchip", "embedded", "tooling"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Build Tools",
]

[project.optional-dependencies]
gui = ["PyQt6>=6.6"]

[project.scripts]
cc5x-helper = "cc5x_setcc_native:main"

[project.gui-scripts]
cc5x-helper-gui = "cc5x_helper_gui:main"

[tool.setuptools]
include-package-data = false
py-modules = ["cc5x_setcc_native", "cc5x_helper_gui"]

[tool.setuptools.package-dir]
"" = "tools"

[tool.setuptools.packages.find]
where = ["tools"]
include = ["cc5x_setcc_native_lib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
